--- a/gogo.css
+++ b/gogo.css
@@ -20,7 +20,7 @@ body {
 }
 #header-container {
     width: 100vw;
-    height: 88.914;
+    height: 118.914px;
     background-color: whitesmoke;
     display: flex;
     justify-content: center;
@@ -161,7 +161,7 @@ body {
     width: 100vw;
     height: 763px;
     display: flex;
- 
+    
     background-color: whitesmoke;
 
     justify-content: center;
@@ -489,7 +489,7 @@ body {
 }
 #left-news-container{
     width: 690px;
-    height: 100vh;
+    height: 3280px;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -501,16 +501,79 @@ body {
     background-color: bisque;
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
+}
+.news-text-container{
+    width: 450px;
+    height: 150px;
+    display: flex;
+    padding-left: 30px;
+    background-color:  white;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .news-box-img{
     width: 210px;
     height: 150px;
+    border-radius: 7px;
     object-fit: cover;
 }
 .news-box-text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: 600;
+    color: black;
+    margin: 0px;
+    padding: 0px;
+}
+.news-box-text-2{
     width: 450px;
-    height: 150px;
-    background-color: blue;
+    height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    color: #87878788;
+    margin: 0px;
+    padding: 0px;
+    
+    overflow:hidden;
+}
+.news-box-icons{
+    width: 450px;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+#news-end-text{
+    width: 120px;
+    height: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: 600   ;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#news-end-container{
+    width: 690px;
+    height: 65px;
+    background-color: #F8F8F8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+#news-middle-line{
+    width: 2px;
+    height: 3155px;
+    margin-top: 50px;
+    background-color:#F8F8F8;
+}
+#right-news-container{
+    width: 410px;
+    height: 3280px;
+    background-color: yellow;
 }
 #footer{
     width: 100vw;
